--- a/MobileAppP1/app/src/main/res/layout/userhomepage.xml
+++ b/MobileAppP1/app/src/main/res/layout/userhomepage.xml
@@ -2,4 +2,34 @@
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="127dp"
+        android:layout_y="32dp"
+        android:text="UserHomePage"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="18dp"
+        android:layout_y="177dp"
+        android:text="You are login In::"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="249dp"
+        android:layout_y="185dp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 </AbsoluteLayout>
